<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:textSize="@dimen/text_size_big"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
    />
    <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/big_space"
            android:theme="@style/whiteUnder"
            android:inputType="textEmailAddress"
    />
    <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/text_pass"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/big_space"
            android:theme="@style/whiteUnder"
            android:inputType="textPassword"
    />
    <Button
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/text_login"
            android:background="@drawable/button_border"
            android:textColor="@android:color/white"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/text_first"
            android:textColor="@android:color/white"
            android:onClick="signUp"
    />
</LinearLayout>