<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp"
        android:background="@drawable/sign_in_back">

    <TextView
            android:id="@+id/headRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_signUp"
            android:textSize="@dimen/text_big_size"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
    />
    <EditText
            android:id="@+id/edit_text_firstName"
            android:inputType="textPersonName"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="@dimen/height_big_edit_text"
            android:layout_below="@id/headRegister"
            android:layout_centerHorizontal="true"
            android:hint="@string/text_firstName"
            android:textColorHint="@android:color/white"
            android:theme="@style/whiteUnder"
            android:layout_marginTop="@dimen/small_space"
    />
    <EditText
            android:id="@+id/edit_text_lastName"
            android:inputType="textPersonName"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="@dimen/height_big_edit_text"
            android:layout_below="@id/edit_text_firstName"
            android:layout_centerHorizontal="true"
            android:hint="@string/text_lastName"
            android:textColorHint="@android:color/white"
            android:theme="@style/whiteUnder"
            android:layout_marginTop="@dimen/small_space"
    />
    <EditText
            android:id="@+id/edit_text_register_email"
            android:inputType="textEmailAddress"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="@dimen/height_big_edit_text"
            android:layout_below="@id/edit_text_lastName"
            android:layout_centerHorizontal="true"
            android:hint="@string/text_email"
            android:textColorHint="@android:color/white"
            android:theme="@style/whiteUnder"
            android:layout_marginTop="@dimen/small_space"
    />
    <EditText
            android:id="@+id/edit_text_register_password"
            android:inputType="textPassword"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="@dimen/height_big_edit_text"
            android:layout_below="@id/edit_text_register_email"
            android:layout_centerHorizontal="true"
            android:hint="@string/text_pass"
            android:textColorHint="@android:color/white"
            android:theme="@style/whiteUnder"
            android:layout_marginTop="@dimen/small_space"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button"
            android:layout_below="@id/edit_text_register_password"
            android:background="@drawable/btn_border"
            android:text="@string/text_reg"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_space"
            android:paddingRight="@dimen/padding"
            android:paddingLeft="@dimen/padding"
    />
</RelativeLayout>