<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background">

    <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_login"
            android:textSize="@dimen/text_big_size"
            android:textColor="@android:color/white"/>
    <EditText
            android:id="@+id/edit_text_mail"
            android:inputType="textEmailAddress"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="@dimen/height_big_edit_text"
            android:hint="@string/text_email"
            android:layout_below="@id/text_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/big_space"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:theme="@style/whiteUnder"/>
    <EditText
            android:id="@+id/edir_text_pass"
            android:inputType="textPassword"
            android:hint="@string/text_pass"
            android:layout_width="@dimen/width_big_edit_text"
            android:layout_height="@dimen/height_big_edit_text"
            android:layout_below="@id/edit_text_mail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_space"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:theme="@style/whiteUnder"/>
    <Button
            android:id="@+id/button_login"
            android:text="@string/text_login"
            android:layout_below="@id/edir_text_pass"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_space"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_border"/>
    <TextView
            android:id="@+id/text_register"
            android:text="@string/text_first"
            android:layout_below="@id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:onClick="signIn"/>

</RelativeLayout>